# space_language_trainer

./: .gitignore  Cargo.toml  Makefile  README.md  setup.sh
_bmad-output/implementation-artifacts/: 1-1-fork-workspace-and-set-up-project-structure.md  1-2-validate-claude-cli-session-continuity.md  1-3-extend-binary-protocol-with-new-message-types.md  2-1-orchestrator-claude-cli-bridge.md  2-2-tts-engine-integration.md  2-3-server-dual-listeners-and-message-routing.md  2-4-client-tcp-connection-and-audio-playback.md  2-5-voice-loop-and-end-to-end-integration.md  3-1-hotkey-pause-resume.md  3-2-hotkey-configuration-and-session-end.md  3-3-claude-cli-retry-and-audio-error-recovery.md  4-1-core-language-coaching-persona-and-real-time-feedback.md  4-2-deferred-feedback-and-scenario-handling.md  4-3-initial-level-assessment-and-focus-suggestions.md  6-1-barge-in-interruption.md  6-2-streaming-tts-pipeline.md  6-3-tts-gpu-alternatives-evaluation.md  6-4-migrate-tts-to-ort-kokoro.md  6-5-visual-language-feedback.md  6-6-session-summary-generation.md  6-7-multi-language-support.md  6-8-chatterbox-turbo-tts-evaluation.md  sprint-status.yaml  tech-spec-cancel-ai-response.md  tech-spec-feedback-corrected-sentence.md  tech-spec-fix-tts-audio-pops.md  tech-spec-personal-profile-context.md
_bmad/_config/: manifest.yaml  (+1 more)
agent/: language_trainer.agent.md
client/: Cargo.toml
common/: Cargo.toml
docs/: spike-claude-cli.md
orchestrator/: Cargo.toml
server/: Cargo.toml
server/src/: listener.rs  main.rs  server.rs  session.rs  transcribe.rs  tts.rs
spike/: claude-cli-test.sh
(+29 files in other folders)
