[package]
name = "space_lt_server"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["cuda-whisper"]
cuda-whisper = ["whisper-rs/cuda"]
cuda-tts = ["sherpa-rs/cuda"]
cuda-all = ["cuda-whisper", "cuda-tts"]

[dependencies]
space_lt_common = { path = "../common" }
whisper-rs = "0.15.1"
anyhow = "1.0.101"
rubato = "1.0.1"
audioadapter-buffers = "2.0.0"
hound = "3.5.1"
sherpa-rs = { version = "0.6.8", default-features = false, features = ["tts"] }
